# mytoolweb

./: README.md  pyproject.toml
mytool/: manage.py  run.ps1
mytool/m3u8/: admin.py  apps.py  models.py  urls.py  views.py
mytool/m3u8/migrations/: 0001_initial.py
mytool/m3u8/templates/m3u8/: download.html  index.html
mytool/mytool/: asgi.py  settings.py  urls.py  wsgi.py
