[tool.poetry]
name = "mytoolweb"
version = "0.1.0"
description = ""
authors = ["FGx <140056503+xerdream@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
